--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
-    "helmet": "^8.1.0"
+    "helmet": "^8.1.0",
+    "mongoose": "^8.13.2",
+    "mongoose-autopopulate": "^1.1.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
