--- a/server/.env.example
+++ b/server/.env.example
@@ -10,8 +10,8 @@ DB_CONNECTION_STRING=mongodb://localhost:27017/myapp
 
 # OpenAI API Configuration
 OPENAI_API_KEY=sk-your-openai-api-key-here
-OPENAI_API_URL=https://api.openai.com/v1
-OPENAI_MODEL=gpt-4o
+INFERENCE_API_URL=https://api.openai.com/v1
+MODEL_NAME=gpt-4o
 
 # JWT Authentication
 JWT_SECRET=my_super_secure_jwt_secret_key_for_production
