finish onboard, add useRegister

--- a/client/app.json
+++ b/client/app.json
@@ -5,6 +5,9 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "extra": {
+      "API_URL": "http://192.168.0.106:3000/api"
+    },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
