fix: update README and environment configuration for OpenAI API

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,8 +9,8 @@ DB_PASSWORD=secure_password
 DB_CONNECTION_STRING=mongodb://localhost:27017/myapp
 
 # OpenAI API Configuration
-OPENAI_API_KEY=sk-your-openai-api-key-here
-INFERENCE_API_URL=https://api.openai.com/v1
+OPENAI_API_KEY=sk-your-openai-api-key-here -> https://github.com/settings/personal-access-tokens/new
+AI_ENDPOINT="https://models.inference.ai.azure.com"
 MODEL_NAME=gpt-4o
 
 # JWT Authentication
